--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Services\\": "services/"
         },
         "classmap": [
             "database/seeds",
